 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

Oct 14 2015, Shigio YAMAGUCHI

	[configure.ac]
	Replaced @prefix_QUOTED@ with @libdir_QUOTED@ in gtags.conf.in.
	From now on, you can use the --prefix, --exec-prefix and --libdir
	options to set a value of @libdir_QUOTED@. This was done by Kevin Farshaw.

	[libparser/parser.c]
	Changed dynamic loading code using ld_dlopenext().
	(Fedora packaging guidelines prohibit .la files)

	if (ld_dlopen('foo.la') == FAILED)
		error_and_exit();
	|
	v
	if (ld_dlopen('foo.la') == FAILED)
		if (ld_dlopenext('foo') == FAILED)
			error_and_exit();

	From now on, extension of DDL is needless.

June 22 2015, Shigio YAMAGUCHI

	To recover easiness of reading source code, removed Doxygen tags
	in the source code except for the followings:
	('description' should be plain text)

	/**< description */

	/**
	 *	description
	 *      @param[in]      var     description
	 *      @param[out]     var     description
	 *      @param[in,out]  var     description
	 *      @return                 description
	 */

November 10 2014, Shigio YAMAGUCHI

	Included SQLite3 version 3.8.7.1 into 'libglibc'.

November 7 2014, Shigio YAMAGUCHI

	Added support of Sqlite3 API for tag files (alpha quality).
	If you will test the code then please do as follows:

        [building phase]
        $ ./configure --with-sqlite3

        [executing phase]
        $ gtags --sqlite3

June 28 2014, Shigio YAMAGUCHI

	New environment variable GTAGSLOGICALPATH was added.
	If it is set then GLOBAL use logical path (PWD), else
	physical path. This variable is now undocumented.

March 17 2014, Shigio YAMAGUCHI

	libutil/pathconvert.c module was divided into the following two modules: